--- a/css/price_slider.css
+++ b/css/price_slider.css
@@ -13,14 +13,18 @@
 
 .ui-slider{
   background: #efefef;
-  height: 8px;
+  border: 1px solid #d2d2d2;
+  height: 10px;
   position: relative;
   border-radius: 100px;
 }
 
 .ui-slider-range{
   background: #a93327;
-  height: 8px;
+  height: 10px;
+  border-top: 1px solid #863f38;
+  border-bottom: 1px solid #863f38;
+  transform: translateY(-1px);
   position: absolute;
 
   &:after{
@@ -38,10 +42,11 @@
 .ui-slider-handle{
   background: #a93327;
   position: absolute;
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   top: 50%;
   display: block;
+  transform: translate(-50%, -50%);
   border-radius: 100px;
   z-index: 10;
 
