--- a/css/style.css
+++ b/css/style.css
@@ -563,12 +563,20 @@ body {
   bottom: 0px;
 }
 
+.bottom-12 {
+  bottom: 3rem;
+}
+
 .bottom-3 {
   bottom: 0.75rem;
 }
 
 .bottom-\[13px\] {
   bottom: 13px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .left-3 {
@@ -587,24 +595,20 @@ body {
   top: 0px;
 }
 
-.top-36 {
-  top: 9rem;
+.top-20 {
+  top: 5rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
+.top-\[-8px\] {
+  top: -8px;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-40 {
+  z-index: 40;
 }
 
 .z-\[100\] {
@@ -632,6 +636,11 @@ body {
   margin-bottom: 2.5rem;
 }
 
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -640,6 +649,11 @@ body {
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .my-6 {
@@ -657,17 +671,16 @@ body {
   margin-bottom: 2rem;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
 .mb-11 {
   margin-bottom: 2.75rem;
 }
 
 .mb-14 {
   margin-bottom: 3.5rem;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .mb-24 {
@@ -686,12 +699,16 @@ body {
   margin-bottom: 1.5rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
 .mb-\[35px\] {
   margin-bottom: 35px;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
 }
 
 .ml-12 {
@@ -706,20 +723,12 @@ body {
   margin-left: 1.25rem;
 }
 
-.mr-12 {
-  margin-right: 3rem;
-}
-
 .mr-2 {
   margin-right: 0.5rem;
 }
 
 .mr-24 {
   margin-right: 6rem;
-}
-
-.mr-44 {
-  margin-right: 11rem;
 }
 
 .mr-7 {
@@ -758,6 +767,14 @@ body {
   margin-top: 10rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
+.mt-60 {
+  margin-top: 15rem;
+}
+
 .mt-7 {
   margin-top: 1.75rem;
 }
@@ -770,20 +787,12 @@ body {
   margin-top: 120px;
 }
 
-.ml-3 {
-  margin-left: 0.75rem;
+.mt-auto {
+  margin-top: auto;
 }
 
-.mt-6 {
-  margin-top: 1.5rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.inline-block {
-  display: inline-block;
+.block {
+  display: block;
 }
 
 .flex {
@@ -810,20 +819,20 @@ body {
   height: 3rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
 .h-8 {
   height: 2rem;
 }
 
 .h-\[240px\] {
   height: 240px;
-}
-
-.h-\[24px\] {
-  height: 24px;
-}
-
-.h-\[28px\] {
-  height: 28px;
 }
 
 .h-full {
@@ -835,16 +844,8 @@ body {
   height: max-content;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-7 {
-  height: 1.75rem;
+.h-screen {
+  height: 100vh;
 }
 
 .w-1\/4 {
@@ -855,8 +856,28 @@ body {
   width: 2.5rem;
 }
 
+.w-11 {
+  width: 2.75rem;
+}
+
 .w-12 {
   width: 3rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-5 {
@@ -871,10 +892,6 @@ body {
   width: 1.75rem;
 }
 
-.w-72 {
-  width: 18rem;
-}
-
 .w-8 {
   width: 2rem;
 }
@@ -883,20 +900,12 @@ body {
   width: 20rem;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
-}
-
-.w-\[24px\] {
-  width: 24px;
-}
-
-.w-\[28px\] {
-  width: 28px;
-}
-
-.w-\[350px\] {
-  width: 350px;
 }
 
 .w-\[688px\] {
@@ -916,49 +925,12 @@ body {
   width: max-content;
 }
 
-.w-2 {
-  width: 0.5rem;
+.min-w-\[28px\] {
+  min-width: 28px;
 }
 
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.min-w-\[58px\] {
-  min-width: 58px;
-}
-
-.min-w-\[82px\] {
-  min-width: 82px;
+.min-w-\[56px\] {
+  min-width: 56px;
 }
 
 .min-w-full {
@@ -971,6 +943,23 @@ body {
 
 .max-w-\[256px\] {
   max-width: 256px;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .rotate-180 {
@@ -994,8 +983,8 @@ body {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.flex-col {
+  flex-direction: column;
 }
 
 .place-items-center {
@@ -1004,10 +993,6 @@ body {
 
 .items-center {
   align-items: center;
-}
-
-.justify-center {
-  justify-content: center;
 }
 
 .justify-between {
@@ -1028,14 +1013,6 @@ body {
 
 .gap-2 {
   gap: 0.5rem;
-}
-
-.gap-20 {
-  gap: 5rem;
-}
-
-.gap-24 {
-  gap: 6rem;
 }
 
 .gap-3 {
@@ -1105,6 +1082,18 @@ body {
   row-gap: 2rem;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
+.break-all {
+  word-break: break-all;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1121,16 +1110,17 @@ body {
   border-radius: 0.375rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
+.rounded-b-md {
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
 }
 
 .border {
@@ -1158,11 +1148,6 @@ body {
 
 .border-transparent {
   border-color: transparent;
-}
-
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-\[\#70C05B\] {
@@ -1210,19 +1195,24 @@ body {
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#f3f2f1\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 242 241 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#ffd1d4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 209 212 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-buttonColor {
   --tw-bg-opacity: 1;
   background-color: rgb(44 174 160 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-gray-50 {
@@ -1235,6 +1225,11 @@ body {
   background-color: rgb(150 6 6 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -1242,16 +1237,6 @@ body {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f3f2f1\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 242 241 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1322,6 +1307,16 @@ body {
   padding-right: 4rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1350,6 +1345,11 @@ body {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.px-\[6px\] {
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 .py-1 {
@@ -1397,21 +1397,21 @@ body {
   padding-bottom: 2rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .pl-4 {
   padding-left: 1rem;
 }
 
-.pr-56 {
-  padding-right: 14rem;
+.pr-12 {
+  padding-right: 3rem;
 }
 
-.pr-\[185px\] {
-  padding-right: 185px;
+.pr-56 {
+  padding-right: 14rem;
 }
 
 .text-left {
@@ -1436,8 +1436,18 @@ body {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-9xl {
+  font-size: 8rem;
   line-height: 1;
 }
 
@@ -1445,17 +1455,8 @@ body {
   font-size: 20px;
 }
 
-.text-\[38px\] {
-  font-size: 38px;
-}
-
 .text-lg {
   font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1464,12 +1465,26 @@ body {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-\[600\] {
   font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
 }
 
 .font-medium {
@@ -1519,6 +1534,11 @@ body {
   color: rgb(143 143 143 / var(--tw-text-opacity));
 }
 
+.text-\[\#8F9399\] {
+  --tw-text-opacity: 1;
+  color: rgb(143 147 153 / var(--tw-text-opacity));
+}
+
 .text-\[\#B60220\] {
   --tw-text-opacity: 1;
   color: rgb(182 2 32 / var(--tw-text-opacity));
@@ -1529,9 +1549,9 @@ body {
   color: rgb(191 191 191 / var(--tw-text-opacity));
 }
 
-.text-fuchsia-100 {
+.text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgb(250 232 255 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -1549,13 +1569,12 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+.underline {
+  text-decoration-line: underline;
 }
 
-.opacity-25 {
-  opacity: 0.25;
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .mix-blend-multiply {
@@ -1576,75 +1595,10 @@ body {
   transition-duration: 150ms;
 }
 
-.before\:absolute::before {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.before\:left-1::before {
-  content: var(--tw-content);
-  left: 0.25rem;
-}
-
-.before\:bottom-1::before {
-  content: var(--tw-content);
-  bottom: 0.25rem;
-}
-
-.before\:h-\[26px\]::before {
-  content: var(--tw-content);
-  height: 26px;
-}
-
-.before\:w-\[\]::before {
-  content: var(--tw-content);
-  width: ;
-}
-
-.before\:w-\[26px\]::before {
-  content: var(--tw-content);
-  width: 26px;
-}
-
-.before\:translate-x-6::before {
-  content: var(--tw-content);
-  --tw-translate-x: 1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.before\:rounded-\[\]::before {
-  content: var(--tw-content);
-  border-radius: ;
-}
-
-.before\:rounded-\[50\%\]::before {
-  content: var(--tw-content);
-  border-radius: 50%;
-}
-
-.before\:bg-white::before {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.before\:transition::before {
-  content: var(--tw-content);
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.before\:content-\[\]::before {
-  --tw-content: ;
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'\'\]::before {
-  --tw-content: '';
-  content: var(--tw-content);
 }
 
 .after\:absolute::after {
@@ -1655,16 +1609,6 @@ body {
 .after\:left-\[2px\]::after {
   content: var(--tw-content);
   left: 2px;
-}
-
-.after\:top-0::after {
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.after\:top-0\.5::after {
-  content: var(--tw-content);
-  top: 0.125rem;
 }
 
 .after\:top-\[2px\]::after {
@@ -1687,17 +1631,6 @@ body {
   border-radius: 9999px;
 }
 
-.after\:border::after {
-  content: var(--tw-content);
-  border-width: 1px;
-}
-
-.after\:border-gray-300::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .after\:bg-white::after {
   content: var(--tw-content);
   --tw-bg-opacity: 1;
@@ -1716,16 +1649,6 @@ body {
   content: var(--tw-content);
 }
 
-.checked\:translate-x-6:checked {
-  --tw-translate-x: 1.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.checked\:bg-\[\#2196F3\]:checked {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 150 243 / var(--tw-bg-opacity));
-}
-
 .hover\:border-mainColorRed:hover {
   --tw-border-opacity: 1;
   border-color: rgb(150 6 6 / var(--tw-border-opacity));
@@ -1741,19 +1664,14 @@ body {
   background-color: rgb(252 240 241 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
-.hover\:text-mainColorRed:hover {
-  --tw-text-opacity: 1;
-  color: rgb(150 6 6 / var(--tw-text-opacity));
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-600:hover {
@@ -1761,14 +1679,19 @@ body {
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
+.hover\:text-mainColorRed:hover {
+  --tw-text-opacity: 1;
+  color: rgb(150 6 6 / var(--tw-text-opacity));
+}
+
+.hover\:text-orange-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
 .focus\:border-blue-500:focus {
   --tw-border-opacity: 1;
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
-.focus\:bg-\[\#1f7b71\]:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 123 113 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1792,23 +1715,14 @@ body {
   --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 
-.peer:checked ~ .peer-checked\:border-blue-600 {
+.peer:checked ~ .peer-checked\:border-mainColorRed {
   --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
-
-.peer:checked ~ .peer-checked\:bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  border-color: rgb(150 6 6 / var(--tw-border-opacity));
 }
 
 .peer:checked ~ .peer-checked\:bg-\[\#009288\] {
   --tw-bg-opacity: 1;
   background-color: rgb(0 146 136 / var(--tw-bg-opacity));
-}
-
-.peer:checked ~ .peer-checked\:bg-\[\#\] {
-  background-color: #;
 }
 
 .peer:checked ~ .peer-checked\:text-gray-600 {
@@ -1833,61 +1747,15 @@ body {
   outline-offset: 2px;
 }
 
-.peer:focus ~ .peer-focus\:ring-4 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.peer:focus ~ .peer-focus\:ring-blue-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
-}
-
 @media (prefers-color-scheme: dark) {
   .dark\:border-gray-600 {
     --tw-border-opacity: 1;
     border-color: rgb(75 85 99 / var(--tw-border-opacity));
   }
 
-  .dark\:bg-gray-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-300 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-gray-600 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-gray-500 {
     --tw-bg-opacity: 1;
     background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-gray-300 {
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:via-emerald-600 {
-    --tw-gradient-to: rgb(5 150 105 / 0)  var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-from), #059669 var(--tw-gradient-via-position), var(--tw-gradient-to);
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-blue-800 {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
-  }
-
-  .peer:focus ~ .dark\:peer-focus\:ring-blue-100 {
-    --tw-ring-opacity: 1;
-    --tw-ring-color: rgb(219 234 254 / var(--tw-ring-opacity));
   }
 }
 
@@ -1900,12 +1768,62 @@ body {
     display: none;
   }
 
+  .lg\:h-48 {
+    height: 12rem;
+  }
+
+  .lg\:w-80 {
+    width: 20rem;
+  }
+
+  .lg\:w-60 {
+    width: 15rem;
+  }
+
+  .lg\:w-6 {
+    width: 1.5rem;
+  }
+
+  .lg\:w-64 {
+    width: 16rem;
+  }
+
+  .lg\:break-before-avoid {
+    -moz-column-break-before: avoid;
+         break-before: avoid;
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:gap-4 {
     gap: 1rem;
   }
 
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .lg\:break-all {
+    word-break: break-all;
+  }
+
+  .lg\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .lg\:pr-32 {
     padding-right: 8rem;
+  }
+
+  .lg\:pr-8 {
+    padding-right: 2rem;
   }
 }
 
@@ -1914,8 +1832,28 @@ body {
     margin-bottom: 8rem;
   }
 
+  .md\:mb-14 {
+    margin-bottom: 3.5rem;
+  }
+
+  .md\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
+  .md\:mb-28 {
+    margin-bottom: 7rem;
+  }
+
   .md\:block {
     display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
   }
 
   .md\:hidden {
@@ -1926,6 +1864,10 @@ body {
     height: 10rem;
   }
 
+  .md\:w-96 {
+    width: 24rem;
+  }
+
   .md\:min-w-\[58px\] {
     min-width: 58px;
   }
@@ -1934,18 +1876,42 @@ body {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
+  .md\:break-all {
+    word-break: break-all;
+  }
+
   .md\:pr-16 {
     padding-right: 4rem;
   }
 }
 
+@media (max-width: 992px) {
+  @media (max-width: 768px) {
+    .lg\:md\:min-w-\[58px\] {
+      min-width: 58px;
+    }
+  }
+}
+
 @media (max-width: 480px) {
-  .sm\:mb-36 {
-    margin-bottom: 9rem;
+  .sm\:order-last {
+    order: 9999;
   }
 
-  .sm\:block {
-    display: block;
+  .sm\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .sm\:mb-36 {
+    margin-bottom: 9rem;
   }
 
   .sm\:flex {
@@ -1956,12 +1922,12 @@ body {
     display: none;
   }
 
-  .sm\:h-\[170px\] {
-    height: 170px;
+  .sm\:w-56 {
+    width: 14rem;
   }
 
-  .sm\:w-80 {
-    width: 20rem;
+  .sm\:w-60 {
+    width: 15rem;
   }
 
   .sm\:max-w-xs {
@@ -1972,11 +1938,12 @@ body {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:gap-7 {
-    gap: 1.75rem;
+  .sm\:break-all {
+    word-break: break-all;
   }
 
-  .sm\:gap-8 {
-    gap: 2rem;
+  .sm\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
